--- a/index.html
+++ b/index.html
@@ -1,1 +1,120 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <link href="task0001_7_1.css" type="text/css" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <title></title>
+</head>
+<body>
+<div id="header">
+    <div id="header-inner">
+        <img id="logo" src="dog.jpg"/>
+      <div id="header-menu">
+         <ul class="list">
+            <li>首页</li>
+            <li>文章</li>
+            <li>作品</li>
+            <li>关于</li>
+         </ul>
+      </div>
+    </div>
+    <a href="https://github.com/" target="_blank">
+        <img id="gb-icon" src="素材\1107142.gif"/>
+    </a>
+</div>
+<div id="top">
+    <img id="top-bg" src="素材\15.jpg"/>
+    <div id="top-txt">
+        <h5>标题</h5>
+        <p>骄傲is的金佛is阿迪奇偶房间爱死哦大佛阿斯顿彷佛积极彷佛文件哦皮肤卡洛斯的积分可垃圾山东IP房间爱爬山的彷佛</p>
+    </div>
+</div>
+<div id="middle">
+    <div id="middle-inner-box">
+        <div id="middle-inner">
+            <div><img src="素材\middle_1.jpg"/><p>&nbsp&nbsp这是第一部分，第一部分第一部分这是第一部分，第一部分第一部分这是第一部分，第一部分第一部分这是第一部分，第一部分第一部分
+                这是第一部分，第一部分第一部分这是第一部分，第一部分第一部分这是第一部分，第一部分第一部分这是第一部分，第一部分第一部分</p> </div>
+            <div><img src="素材\middle_2.jpg"/><p>&nbsp&nbsp这是第二部分，第二部分第二部分这是第二部分，第二部分第二部分这是第二部分，第二部分第二部分这是第二部分，第二部分第二部分
+                这是第二部分，第二部分第二部分这是第二部分，第二部分第二部分这是第二部分，第二部分第二部分这是第二部分，第二部分第二部分
+                这是第二部分，第二部分第二部分这是第二部分，第二部分第二部分这是第二部分，第二部分第二部分这是第二部分，第二部分第二部分
+                这是第二部分，第二部分第二部分这是第二部分，第二部分第二部分这是第二部分，第二部分第二部分这是第二部分，第二部分第二部分</p> </div>
+            <div><img src="素材\middle_3.jpg"/><p>&nbsp&nbsp这是第三部分，第三部分第三部分这是第三部分，第三部分第三部分这是第三部分，第三部分第三部分这是第三部分，第三部分第三部分</p> </div>
+        </div>
+    </div>
+</div>
+<div id="self-intro-top">
 
+</div>
+<div id="self-intro-bottom">
+    <img src="素材\头像.jpg"/>
+    <h3>My name is Rachel</h3>
+    <p>自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍
+        自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍自我介绍</p>
+</div>
+<div id="bottom">
+    <div id="bottom-menu">
+        <ul class="list2">
+            <li>首页</li>
+            <li>文章</li>
+            <li>作品</li>
+            <li>关于</li>
+        </ul>
+    </div>
+
+        <div id="link">
+            <div class="link-ul">
+                <h4>友情链接</h4>
+                <ul>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                </ul>
+            </div>
+            <div class="link-ul">
+                <h4>友情链接</h4>
+                <ul>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                </ul>
+            </div>
+            <div class="link-ul">
+                <h4>友情链接</h4>
+                <ul>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                </ul>
+            </div>
+            <div class="link-ul">
+                <h4>友情链接</h4>
+                <ul>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                </ul>
+            </div>
+            <div class="link-ul">
+                <h4>友情链接</h4>
+                <ul>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
+</body>
+</html>
